[package]
name = "udp-cargo-plugin"
version = "1.0.0"
edition = "2021"
authors = ["UDP Team <team@universaldependency.com>"]
description = "Cargo plugin for Universal Dependency Platform (UDP) integration"
homepage = "https://universaldependency.com"
repository = "https://github.com/universal-dependency-platform/udp-cargo-plugin"
license = "Apache-2.0"
keywords = ["udp", "dependency-management", "cross-language", "cargo", "rust"]
categories = ["development-tools", "development-tools::cargo-plugins"]
readme = "README.md"

[lib]
name = "udp_cargo_plugin"
path = "src/lib.rs"

[[bin]]
name = "cargo-udp"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }

# HTTP client for UDP API
reqwest = { version = "0.11", features = ["json", "stream"] }

# File system operations
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2.4"

# Templating and code generation
tera = "1.19"
handlebars = "4.5"

# Cargo integration
cargo_metadata = "0.18"
toml = "0.8"
toml_edit = "0.21"

# Utilities
log = "0.4"
env_logger = "0.10"
colored = "2.0"
indicatif = "0.17"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform support
dirs = "5.0"
dunce = "1.0"

# FFI and bridge support
libloading = "0.8"
cc = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[build-dependencies]
cc = "1.0"

[features]
default = []
bridge-c = []
bridge-python = ["pyo3"]
bridge-java = []
bridge-nodejs = []

# Optional FFI bridges
[dependencies.pyo3]
version = "0.20"
features = ["auto-initialize"]
optional = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]